Modifique el texto Why Choose Us?

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
 	<meta name="author" content="freehtml5.co" />
 
-	<!-- 
+	<!--
 	//////////////////////////////////////////////////////
 
-	FREE HTML5 TEMPLATE 
+	FREE HTML5 TEMPLATE
 	DESIGNED & DEVELOPED by FreeHTML5.co
-		
+
 	Website: 		http://freehtml5.co/
 	Email: 			info@freehtml5.co
 	Twitter: 		http://twitter.com/fh5co
@@ -36,7 +36,7 @@
 
 	<!-- <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,500,700,800" rel="stylesheet">	 -->
 	<link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
-	
+
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
@@ -62,9 +62,9 @@
 
 	</head>
 	<body>
-		
+
 	<div class="fh5co-loader"></div>
-	
+
 	<div id="page">
 	<nav class="fh5co-nav" role="navigation">
 		<div class="top-menu">
@@ -91,7 +91,7 @@
 						</ul>
 					</div>
 				</div>
-				
+
 			</div>
 		</div>
 	</nav>
@@ -140,7 +140,7 @@
 			   			</div>
 			   		</div>
 		   		</div>
-		   	</li>		   	
+		   	</li>
 		  	</ul>
 	  	</div>
 	</aside>
@@ -153,7 +153,7 @@
 		<div class="choose animate-box">
 			<div class="fh5co-heading">
 				<h2>Why Choose Us?</h2>
-				<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+				<p>Por que somos los mejores del mundo</p>
 			</div>
 			<ul class="list-nav">
 				<li><i class="icon-check2"></i>Far far away, behind the word mountains, far from the countries Vokalia</li>
@@ -308,7 +308,7 @@
 							<h3><a href="#">We've grown from a regional</a></h3>
 							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
 							<a href="#" class="btn btn-primary">Read More</a>
-						</div> 
+						</div>
 					</div>
 				</div>
 				<div class="col-lg-6 col-md-6">
@@ -320,7 +320,7 @@
 							<h3><a href="#">We've grown from a regional</a></h3>
 							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
 							<a href="#" class="btn btn-primary">Read More</a>
-						</div> 
+						</div>
 					</div>
 				</div>
 			</div>
@@ -373,7 +373,7 @@
 			<div class="row copyright">
 				<div class="col-md-12 text-center">
 					<p>
-						<small class="block">&copy; 2016 Free HTML5. All Rights Reserved.</small> 
+						<small class="block">&copy; 2016 Free HTML5. All Rights Reserved.</small>
 						<small class="block">Designed by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a> Demo Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a></small>
 					</p>
 					<p>
@@ -394,7 +394,7 @@
 	<div class="gototop js-top">
 		<a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
 	</div>
-	
+
 	<!-- jQuery -->
 	<script src="js/jquery.min.js"></script>
 	<!-- jQuery Easing -->
@@ -413,4 +413,3 @@
 
 	</body>
 </html>
-
