Modifique la mision

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 				<div class="col-md-6 col-md-offset-3 text-center animate-box">
 					<h2>Mission</h2>
 					<blockquote>
-						<p>Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci rem dolorem nesciunt perferendis quae amet deserunt eum labore quidem minima.</p>
+						<p>Que todo el mundo nos use a nosotros.</p>
 					</blockquote>
 				</div>
 			</div>
