Cambie en algunos parrafos a español Web design

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 						</span>
 						<div class="desc">
 							<h3><a href="#">Brand Identity</a></h3>
-							<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+							<p>Un nuevo logo todo.</p>
 						</div>
 					</div>
 				</div>
@@ -197,7 +197,7 @@
 						</span>
 						<div class="desc">
 							<h3><a href="#">Web Design &amp; UI</a></h3>
-							<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+							<p>Hacer las cosas mejor</p>
 						</div>
 					</div>
 				</div>
