Cambie lo de Web Development

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 						</span>
 						<div class="desc">
 							<h3><a href="#">Web Development</a></h3>
-							<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+							<p>El desarrollo de paginas web ha ido mejorando</p>
 						</div>
 					</div>
 				</div>
