--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 					</div>
 					<div class="col-md-6 nopadding animate-box">
 						<div class="desc">
-							<h3>John Doe</h3>
+							<h3>Luis Gustavo</h3>
 							<span>CEO, Founder</span>
 							<p>Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci.</p>
 							<p>
